--- a/postgres/docker-compose.yaml
+++ b/postgres/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - chatops-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+    networks:
+      - pg
     #TODO : healthcheck
     deploy:
       resources:
@@ -21,3 +23,6 @@ services:
   #TODO: exporter prometheuscommunity/postgres-exporter:v0.10.1
 volumes:
   chatops-data:
+networks:
+  pg:
+    driver: bridge
